# GlareCheck.com

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_mockup.sh  setup_dev_env.sh  test_complete_system.py  test_main_workflow.py
assets/: html_template copy.html  html_template.html  module_reflection_profiles.csv
mockup_app/: .env.example  .gitignore  CLAUDE.md  COMPONENT_MAP.md  I18N_IMPLEMENTATION_GUIDE.md  NOTIFICATION_PATTERN.md  README.md  REFACTORING_PLAN.md  TASK_auto_update_corner_heights_dialog.md  TASK_corner_heights_dialog_visibility.md  TASK_lock_hide_editing_controls.md  TASK_polygon_corner_numbering.md  TODO.md  app.py  config.py  test_debug.html  update_i18n.pl
mockup_app/logos/: GlearCheck_Logo_5.ai
mockup_app/static/css/: styles.css
mockup_app/static/data/: README.md  default-module-types.json
mockup_app/static/js/: app.js  calculations.js  config.js  corner-heights.js  drawing.js  map.js  pv-areas.js  state.js  ui.js  utils.js
mockup_app/static/js/core/: map-manager.js  state-manager.js  topography-source-manager.js
mockup_app/static/js/i18n/: translations.js
mockup_app/static/js/pv-areas/: dimension-manager.js  dimensions.js  drawing-manager.js  editing-enhancer.js  polygon-enhancer.js
mockup_app/static/js/ui/: corner-details-manager.js  language-switcher.js  module-type-manager.js  pv-list-renderer.js  search-manager.js  ui-manager.js
mockup_app/static/js/utils/: geometry.js  kml-exporter.js
mockup_app/templates/: index.html  index_modular.html  module_types.json
src/: __init__.py  config.py  main.py
src/core/: __init__.py  coordinates.py  geometry.py  glare_analysis.py  models.py  reflection.py  reflection_base.py  reflection_csv_loader.py  sun_calculations.py
src/data/: __init__.py
src/reporting/: __init__.py  base.py  excel_reporter.py  html_reporter.py  pdf_reporter.py
src/utils/: __init__.py
src/visualization/: __init__.py  base.py  effects.py  glare_plots.py  glare_plots_extension.py  maps.py  statistics.py
src/workflow/: __init__.py  data_processor.py  pipeline.py  validator.py
